@@ -1,5 +1,10 @@
 Changes with Apache 2.0.32-dev
 
+  *) Not being able to bind to the socket is a fatal error.  We should
+     print an error to the console, and return a non-zero status code.
+     With these changes, all of the Unix MPMs do that correctly.
+     [Ryan Bloom]
+
   *) suexec: Allow HTTPS and SSL_* environment variables to be passed
      through to CGI scripts. PR 9163
      [Brian Reid <breid@customlogic.com>, 
